tests/cypress.json
{
 
  "pluginsFile": false,
  "supportFile": false,
  "fixturesFolder": false,
  "env": {
    "kiali_url": "kiali.bigbang.dev",
    "jaeger_url": "jaeger.bigbang.dev"
  }
}
