tests/dependencies.yaml
istio-operator:
  git:
    repo: "https://repo1.dso.mil/platform-one/big-bang/apps/core/istio-operator.git"
    tag: "1.7.0-bb.1"
  namespace: istio-operator
