tests/images.txt
registry1.dso.mil/ironbank/opensource/istio/install-cni:1.25.2
registry1.dso.mil/ironbank/tetrate/istio/install-cni:1.24.2-tetratefips-v0
registry1.dso.mil/ironbank/tetrate/istio/proxyv2:1.24.1-tetratefips-v0
registry1.dso.mil/ironbank/tetrate/istio/pilot:1.24.1-tetratefips-v0
registry1.dso.mil/ironbank/big-bang/base:2.1.0
