tests/test-values.yaml
imagePullSecrets:
  - private-registry

networkPolicies:
  enabled: true
  controlPlaneCidr: 172.16.0.0/12

hardened:
  enabled: true
